--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+FACEBOOK_APP_ID=990224855964782
+FACEBOOK_APP_SECRET=c48f06ee32fa2984ec6f9e24e775cff6
+IMG_BB_API_KEY=21e89e645bae3b85fb6ce050b09d6930
